tests/NormalTests/paczka1/fuzzy1/36747402.err
Error in line 2: OmXiY S10 80,9
Error in line 7: S383 A221 97,6
Error in line 16: zg7B60VN A221 47,3
Error in line 6: PLXFgBjy S383 48,6
Error in line 33: k1xIUr6LOxG S383 97,3
Error in line 20: PLXFgBjy A221 52,7
